--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -224,7 +224,7 @@ strong {
   }
 }
 
-.col--3-4 {z-index:999;
+.col--3-4 {
   @include breakpoint($bp--mid) {
     width: 70%;
   }
@@ -234,4 +234,14 @@ strong {
   @include breakpoint($bp--mid) {
     width: 30%;
   }
+}
+
+
+/*
+ * This is exclusively for use with react-sticky.
+ * Essentially, we need to make sure the sticky element stays on top of everything.
+ */
+.header-container .sticky {
+  z-index: 2;
+  width: inherit;
 }
